--- a/index.html
+++ b/index.html
@@ -1,150 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio Website HTML CSS Javascript</title>
-
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio Website in HTML, CSS & Javascript</title>
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- box icons -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-
+  <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+      <a href="#" class="logo">Mihai.<span class="animate" style="--i:1;"></span></a>
 
-        <i class='bx bx-menu' id="menu-icon"></i>
+      <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
-        <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-        </nav>
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+
+        <span class="active-nav"></span>
+        <span class="animate" style="--i:2;"></span>
+      </nav>
     </header>
 
     <!-- home section design -->
-    <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hello, It's Me!</h3>
-            <h1>Mihai Sîrb</h1>
-            <h3>And I'm a <span>Frontend Developer</span></h3>
-            <p>Strong organizational and time management skills. Detail-oriented and able to handle 
-            multiple tasks simultaneously. A fast learner and adaptable professional. I thrive in both 
-            independent and collaborative environments. Strong analytical and problem solving skills.</p>
-            <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="#"><i class='bx bxl-whatsapp'></i></a>
-            </div>
-            <a href="#" class="btn">Download CV</a>
+    <section class="home show-animate" id="home">
+      <div class="home-content">
+        <h1>Hello, I'm <span>Mihai Sîrb</span><span class="animate" style="--i:2;"></span></h1>
+        <div class="text-animate">
+          <h3>Frontend Developer</h3>
+          <span class="animate" style="--i:3;"></span>
         </div>
+        <p>
+          Strong organizational and time management skills. Detail-oriented and
+          able to handle multiple tasks simultaneously. A fast learner and
+          adaptable professional. I thrive in both independent and collaborative
+          environments. Strong analytical and problem solving skills.
+          <span class="animate" style="--i:4;"></span>
+        </p>
 
-        <div class="home-img">
-            <img src="images/profile.jpg" alt="">
+        <div class="btn-box">
+          <a href="#" class="btn">Hire Me!</a>
+          <a href="#" class="btn">Let's Talk!</a>
+          <span class="animate" style="--i:5;"></span>
         </div>
+      </div>
+
+      <div class="home-sci">
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="#"><i class="bx bxl-whatsapp"></i></a>
+        <span class="animate" style="--i:6;"></span>
+      </div>
+
+      <div class="home-imgHover"></div>
+      <span class="animate home-img" style="--i:7;"></span>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
-        <div class="about-img">
-            <img src="images/profile2.jpg" alt="Profile Picture">
-        </div>
+      <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend Developer!</h3>
-            <p>Strong organizational and time management skills. Detail-oriented and able to handle 
-            multiple tasks simultaneously. A fast learner and adaptable professional. I thrive in both 
-            independent and collaborative environments. Strong analytical and problem solving skills.</p>
-            <a href="#" class="btn">Read More</a>
+      <div class="about-img">
+        <img src="images/about.jpg" alt="" />
+        <span class="circle-spin"></span>
+        <span class="animate scroll" style="--i:2;"></span>
+      </div>
+
+      <div class="about-content">
+        <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
+        <p>
+          Strong organizational and time management skills. Detail-oriented and
+          able to handle multiple tasks simultaneously. A fast learner and
+          adaptable professional. I thrive in both independent and collaborative
+          environments. Strong analytical and problem solving skills.
+          <span class="animate scroll" style="--i:4;"></span>
+        </p>
+
+        <div class="btn-box btns">
+          <a href="#" class="btn">Read More</a>
+          <span class="animate scroll" style="--i:5;"></span>
         </div>
+      </div>
     </section>
 
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Projects</span></h2>
+      <h2 class="heading">Latest <span>Projects</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <div class="portfolio-container">
-            <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Laureus Website</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, dolorum!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Space Tourism</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, dolorum!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>My Project</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, dolorum!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>My Project</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, dolorum!</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="images/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Laureus Website</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+              dolorum!
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+          <span class="animate scroll" style="--i:2;"></span>
         </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio2.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Space Tourism</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+              dolorum!
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+          <span class="animate scroll" style="--i:3;"></span>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio3.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>My Project</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+              dolorum!
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+          <span class="animate scroll" style="--i:4;"></span>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio4.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>My Project</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+              dolorum!
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+          <span class="animate scroll" style="--i:5;"></span>
+        </div>
+      </div>
     </section>
-
-    <!-- education section design -->
-
+  
     <!-- skills section design -->
+    <section id="skills" class="skills">
+      <h2 class="heading">My <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
+      
+      <div class="skills-row">
+        <div class="skills-column">
+          <h3 class="title">Coding Skills<span class="animate scroll" style="--i:2;"></span></h3>
+
+          <div class="skills-box">
+            <div class="skills-content">
+              <div class="progress">
+                <h3>HTML <span>90%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>CSS <span>83%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>JavaScript <span>67%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>React <span>69%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+            </div>
+            <span class="animate scroll" style="--i:3;"></span>
+          </div>
+        </div>
+
+        <div class="skills-column">
+          <h3 class="title">Professional Skills<span class="animate scroll" style="--i:5;"></span></h3>
+
+          <div class="skills-box">
+            <div class="skills-content">
+              <div class="progress">
+                <h3>Web Design <span>70%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>Web Development <span>67%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>Graphic Design <span>65%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+            </div>
+            <span class="animate scroll" style="--i:6;"></span>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- contact section design -->
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
+      <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <form action="#">
-            <div class="input-box">
-                <input type="text" placeholder="Full Name"/>
-                <input type="email" placeholder="Email Address"/>
-            </div>
-            <div class="input-box">
-                <input type="number" placeholder="Mobile Number"/>
-                <input type="text" placeholder="Email Subject"/>
-            </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
+      <form action="#">
+        <div class="input-box">
+          <div class="input-field">
+            <input type="text" placeholder="Full Name" required>
+            <span class="focus"></span>
+          </div>
+          <div class="input-field">
+            <input type="email" placeholder="Email Adress" required>
+            <span class="focus"></span>
+          </div>
+          <span class="animate scroll" style="--i:3;"></span>
+        </div>
+
+        <div class="input-box">
+          <div class="input-field">
+            <input type="tel" placeholder="Mobile Number" required>
+            <span class="focus"></span>
+          </div>
+          <div class="input-field">
+            <input type="text" placeholder="Email Subject" required>
+            <span class="focus"></span>
+          </div>
+          <span class="animate scroll" style="--i:5;"></span>
+        </div>
+
+        <div class="textarea-field">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+          <span class="focus"></span>
+          <span class="animate scroll" style="--i:7;"></span>
+        </div>
+        
+        <div class="btn-box btns">
+          <button type="submit" class="btn">Submit</button>
+          <span class="animate scroll" style="--i:9;"></span>
+        </div>
+      </form>
     </section>
 
     <!-- footer design -->
     <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; 2024 by Mysha | All Rights Reserved.</p>
-        </div>
+      <div class="footer-text">
+        <p>Copyright &copy; 2024 by Mihai Sirb | All Rights Reserved.</p>
+        <span class="animate scroll" style="--i:1;"></span>
+      </div>
 
-        <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-        </div>
+      <div class="footer-iconTop">
+        <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+        <span class="animate scroll" style="--i:3;"></span>
+      </div>
     </footer>
 
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
