--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
   <body>
     <!-- header design -->
     <header class="header">
-      <a href="#" class="logo">Mihai.<span class="animate" style="--i:1;"></span></a>
+      <a href="#" class="logo"
+        >Mihai.<span class="animate" style="--i: 1"></span
+      ></a>
 
-      <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
+      <div class="bx bx-menu" id="menu-icon">
+        <span class="animate" style="--i: 2"></span>
+      </div>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -29,75 +33,88 @@
         <a href="#contact">Contact</a>
 
         <span class="active-nav"></span>
-        <span class="animate" style="--i:2;"></span>
+        <span class="animate" style="--i: 2"></span>
       </nav>
     </header>
 
     <!-- home section design -->
     <section class="home show-animate" id="home">
       <div class="home-content">
-        <h1>Hello, I'm <span>Mihai Sîrb</span><span class="animate" style="--i:2;"></span></h1>
+        <h1>
+          Hello, I'm <span>Mihai Sîrb</span
+          ><span class="animate" style="--i: 2"></span>
+        </h1>
         <div class="text-animate">
           <h3>Frontend Developer</h3>
-          <span class="animate" style="--i:3;"></span>
+          <span class="animate" style="--i: 3"></span>
         </div>
         <p>
           Strong organizational and time management skills. Detail-oriented and
           able to handle multiple tasks simultaneously. A fast learner and
           adaptable professional. I thrive in both independent and collaborative
           environments. Strong analytical and problem solving skills.
-          <span class="animate" style="--i:4;"></span>
+          <span class="animate" style="--i: 4"></span>
         </p>
 
         <div class="btn-box">
-          <a href="#" class="btn">Hire Me!</a>
-          <a href="#" class="btn">Let's Talk!</a>
-          <span class="animate" style="--i:5;"></span>
+          <a href="#contact" class="btn">Hire Me!</a>
+          <a href="#contact" class="btn">Let's Talk!</a>
+          <span class="animate" style="--i: 5"></span>
         </div>
       </div>
 
       <div class="home-sci">
-        <a href="#"><i class="bx bxl-facebook"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-        <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-        <a href="#"><i class="bx bxl-whatsapp"></i></a>
-        <span class="animate" style="--i:6;"></span>
+        <a href="https://www.facebook.com/mysha37" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/mihai-sirb-frontend" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.instagram.com/sirb_mihai_valentin" target="_blank"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=0040727027164" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+        <span class="animate" style="--i: 6"></span>
       </div>
 
       <div class="home-imgHover"></div>
-      <span class="animate home-img" style="--i:7;"></span>
+      <span class="animate home-img" style="--i: 7"></span>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
-      <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
+      <h2 class="heading">
+        About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="about-img">
         <img src="images/about.jpg" alt="" />
         <span class="circle-spin"></span>
-        <span class="animate scroll" style="--i:2;"></span>
+        <span class="animate scroll" style="--i: 2"></span>
       </div>
 
       <div class="about-content">
-        <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
+        <h3>
+          Frontend Developer!<span class="animate scroll" style="--i: 3"></span>
+        </h3>
         <p>
-          Strong organizational and time management skills. Detail-oriented and
-          able to handle multiple tasks simultaneously. A fast learner and
-          adaptable professional. I thrive in both independent and collaborative
-          environments. Strong analytical and problem solving skills.
-          <span class="animate scroll" style="--i:4;"></span>
+          Hello there! I'm Mihai, a passionate Frontend Developer with expertise
+          in HTML, CSS, JavaScript, React, GitHub, Strapi CMS, Material UI and
+          many others. I thrive on turning creative ideas into responsive and
+          user-friendly interfaces. My proficiency in modern frontend
+          technologies allows me to craft seamless and engaging user
+          experiences. Feel free to explore my portfolio and let's connect to
+          enjoy the endless possibilities of web development together!
+          <span class="animate scroll" style="--i: 4"></span>
         </p>
 
         <div class="btn-box btns">
-          <a href="#" class="btn">Read More</a>
-          <span class="animate scroll" style="--i:5;"></span>
+          <a href="#skills" class="btn">Read More</a>
+          <span class="animate scroll" style="--i: 5"></span>
         </div>
       </div>
     </section>
 
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
-      <h2 class="heading">Latest <span>Projects</span><span class="animate scroll" style="--i:1;"></span></h2>
+      <h2 class="heading">
+        Latest <span>Projects</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="portfolio-container">
         <div class="portfolio-box">
@@ -110,7 +127,7 @@
             </p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
-          <span class="animate scroll" style="--i:2;"></span>
+          <span class="animate scroll" style="--i: 2"></span>
         </div>
 
         <div class="portfolio-box">
@@ -123,7 +140,7 @@
             </p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
-          <span class="animate scroll" style="--i:3;"></span>
+          <span class="animate scroll" style="--i: 3"></span>
         </div>
 
         <div class="portfolio-box">
@@ -136,7 +153,7 @@
             </p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
-          <span class="animate scroll" style="--i:4;"></span>
+          <span class="animate scroll" style="--i: 4"></span>
         </div>
 
         <div class="portfolio-box">
@@ -149,18 +166,23 @@
             </p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
-          <span class="animate scroll" style="--i:5;"></span>
+          <span class="animate scroll" style="--i: 5"></span>
         </div>
       </div>
     </section>
-  
+
     <!-- skills section design -->
     <section id="skills" class="skills">
-      <h2 class="heading">My <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
-      
+      <h2 class="heading">
+        My <span>Skills</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
+
       <div class="skills-row">
         <div class="skills-column">
-          <h3 class="title">Coding Skills<span class="animate scroll" style="--i:2;"></span></h3>
+          <h3 class="title">
+            Coding Skills<span class="animate scroll" style="--i: 2"></span>
+          </h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -184,12 +206,17 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
-            <span class="animate scroll" style="--i:3;"></span>
+            <span class="animate scroll" style="--i: 3"></span>
           </div>
         </div>
 
         <div class="skills-column">
-          <h3 class="title">Professional Skills<span class="animate scroll" style="--i:5;"></span></h3>
+          <h3 class="title">
+            Professional Skills<span
+              class="animate scroll"
+              style="--i: 5"
+            ></span>
+          </h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -208,7 +235,7 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
-            <span class="animate scroll" style="--i:6;"></span>
+            <span class="animate scroll" style="--i: 6"></span>
           </div>
         </div>
       </div>
@@ -216,42 +243,52 @@
 
     <!-- contact section design -->
     <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
+      <h2 class="heading">
+        Contact <span>Me!</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <form action="#">
         <div class="input-box">
           <div class="input-field">
-            <input type="text" placeholder="Full Name" required>
+            <input type="text" placeholder="Full Name" required />
             <span class="focus"></span>
           </div>
           <div class="input-field">
-            <input type="email" placeholder="Email Adress" required>
+            <input type="email" placeholder="Email Adress" required />
             <span class="focus"></span>
           </div>
-          <span class="animate scroll" style="--i:3;"></span>
+          <span class="animate scroll" style="--i: 3"></span>
         </div>
 
         <div class="input-box">
           <div class="input-field">
-            <input type="tel" placeholder="Mobile Number" required>
+            <input type="tel" placeholder="Mobile Number" required />
             <span class="focus"></span>
           </div>
           <div class="input-field">
-            <input type="text" placeholder="Email Subject" required>
+            <input type="text" placeholder="Email Subject" required />
             <span class="focus"></span>
           </div>
-          <span class="animate scroll" style="--i:5;"></span>
+          <span class="animate scroll" style="--i: 5"></span>
         </div>
 
         <div class="textarea-field">
-          <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Your Message"
+            required
+          ></textarea>
           <span class="focus"></span>
-          <span class="animate scroll" style="--i:7;"></span>
+          <span class="animate scroll" style="--i: 7"></span>
         </div>
-        
+
         <div class="btn-box btns">
           <button type="submit" class="btn">Submit</button>
-          <span class="animate scroll" style="--i:9;"></span>
+          <span class="animate scroll" style="--i: 9"></span>
         </div>
       </form>
     </section>
@@ -260,12 +297,12 @@
     <footer class="footer">
       <div class="footer-text">
         <p>Copyright &copy; 2024 by Mihai Sirb | All Rights Reserved.</p>
-        <span class="animate scroll" style="--i:1;"></span>
+        <span class="animate scroll" style="--i: 1"></span>
       </div>
 
       <div class="footer-iconTop">
         <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
-        <span class="animate scroll" style="--i:3;"></span>
+        <span class="animate scroll" style="--i: 3"></span>
       </div>
     </footer>
 
