--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
 
     <!-- box icons -->
     <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"rel="stylesheet"/>
   </head>
 
   <body>
     <!-- header design -->
     <header class="header">
-      <a href="#" class="logo"
-        >Mihai.<span class="animate" style="--i: 1"></span
-      ></a>
-
+      <a href="#contact" class="logo">Mihai.<span class="animate" style="--i: 1"></span></a>
       <div class="bx bx-menu" id="menu-icon">
         <span class="animate" style="--i: 2"></span>
       </div>
@@ -77,8 +72,8 @@
 
     <!-- about section design -->
     <section class="about" id="about">
-      <h2 class="heading">
-        About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
+      <h2 class="heading">About <span>Me</span>
+        <span class="animate scroll" style="--i: 1"></span>
       </h2>
 
       <div class="about-img">
@@ -212,10 +207,8 @@
 
         <div class="skills-column">
           <h3 class="title">
-            Professional Skills<span
-              class="animate scroll"
-              style="--i: 5"
-            ></span>
+            Professional Skills
+            <span class="animate scroll" style="--i: 5"></span>
           </h3>
 
           <div class="skills-box">
