Skills page changes

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="skills-row">
         <div class="skills-column">
           <h3 class="title">
-            Coding Skills<span class="animate scroll" style="--i: 2"></span>
+            Technical Skills<span class="animate scroll" style="--i: 2"></span>
           </h3>
 
           <div class="skills-box">
@@ -187,17 +187,17 @@
               </div>
 
               <div class="progress">
-                <h3>CSS <span>83%</span></h3>
+                <h3>CSS <span>80%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>JavaScript <span>67%</span></h3>
+                <h3>JavaScript <span>75%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>React <span>69%</span></h3>
+                <h3>React <span>75%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
@@ -214,17 +214,22 @@
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
-                <h3>Web Design <span>70%</span></h3>
+                <h3>Creativity <span>90%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>Web Development <span>67%</span></h3>
+                <h3>Problem Solving <span>75%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>Graphic Design <span>65%</span></h3>
+                <h3>Communication <span>85%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>Teamwork <span>85%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
